--- a/pom.xml
+++ b/pom.xml
@@ -36,11 +36,15 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
 		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>2.1.214</version>
+		</dependency>
+		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
+		</dependency>-->
 		<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
 		<dependency>
     		<groupId>io.jsonwebtoken</groupId>
@@ -53,10 +57,10 @@
 		  <artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 		
-		<dependency>
+<!--		<dependency>
 		  <groupId>org.springframework.boot</groupId>
 		  <artifactId>spring-boot-starter-thymeleaf</artifactId>
-		</dependency>
+		</dependency>-->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
