--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,19 @@
-dataSourceClassName=org.mariadb.jdbc.MySQLDataSource
-spring.dataSource.url=jdbc:mariadb://localhost:3306/products
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.dataSource.username=root
-spring.dataSource.password=root
+#dataSourceClassName=org.mariadb.jdbc.MySQLDataSource
+#spring.dataSource.url=jdbc:mariadb://localhost:3306/products
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.dataSource.username=root
+#spring.dataSource.password=root
 
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+
+jdbc.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:order
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.defer-datasource-initialization=true
+spring.h2.console.enabled=true
+hibernate.dialect=org.hibernate.dialect.H2Dialect
+hibernate.hbm2ddl.auto=create
+server.error.whitelabel.enabled=false
